--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -14,6 +14,7 @@
         width: 700px;
         height: 600px;
     }
+}
 
 @media (min-width: 500px) and (max-height: 400px){
     .Burger{
@@ -21,6 +22,7 @@
         height: 300px;
     }
 }
+
 
 @media (min-width: 500px) and (min-height: 401px){
     .Burger{
